Fixed a few errors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!-- -------- Header -------- -->
     <header class="header">
       <!-- Logo -->
       <div class="header__logo-box">
@@ -34,5 +35,11 @@
         <a href="#" class="btn btn--white">Discover our tours</a>
       </div>
     </header>
+    <!-- -------- Main -------- -->
+    <main>
+      <section class="section-about">
+        <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
+      </section>
+    </main>
   </body>
 </html>
