--- a/index.html
+++ b/index.html
@@ -86,6 +86,70 @@
           </div>
         </div>
       </section>
+      <section class="section-features">
+        <!-- Flexbox container -->
+        <div class="container-feature">
+          <!-- feature box 1 -->
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-world"></i>
+            <div class="text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Repudiandae totam, sit officiis ullam enim voluptate
+                reprehenderit hic id eligendi.
+              </p>
+            </div>
+          </div>
+
+          <!-- feature box 2 -->
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <div class="text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Repudiandae totam, sit officiis ullam enim voluptate
+                reprehenderit hic id eligendi.
+              </p>
+            </div>
+          </div>
+
+          <!-- feature box 3 -->
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <div class="text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Repudiandae totam, sit officiis ullam enim voluptate
+                reprehenderit hic id eligendi.
+              </p>
+            </div>
+          </div>
+
+          <!-- feature box 4 -->
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <div class="text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Repudiandae totam, sit officiis ullam enim voluptate
+                reprehenderit hic id eligendi.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
