Started section tours

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <i class="feature-box__icon icon-basic-compass"></i>
             <div class="text">
               <h3 class="heading-tertiary u-margin-bottom-small">
-                Explore the world
+                Meet Nature
               </h3>
               <p class="paragraph">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -124,7 +124,7 @@
             <i class="feature-box__icon icon-basic-map"></i>
             <div class="text">
               <h3 class="heading-tertiary u-margin-bottom-small">
-                Explore the world
+                Find your way
               </h3>
               <p class="paragraph">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -137,6 +137,29 @@
           <!-- feature box 4 -->
           <div class="feature-box">
             <i class="feature-box__icon icon-basic-heart"></i>
+            <div class="text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Repudiandae totam, sit officiis ullam enim voluptate
+                reprehenderit hic id eligendi.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <!-- Most popular tours TEXT Area -->
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+
+        <div class="container-feature">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
             <div class="text">
               <h3 class="heading-tertiary u-margin-bottom-small">
                 Explore the world
