Working on Card perspective transition

--- a/index.html
+++ b/index.html
@@ -158,17 +158,14 @@
         </div>
 
         <div class="container-feature">
-          <div class="feature-box">
-            <i class="feature-box__icon icon-basic-compass"></i>
-            <div class="text">
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Explore the world
-              </h3>
-              <p class="paragraph">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Repudiandae totam, sit officiis ullam enim voluptate
-                reprehenderit hic id eligendi.
-              </p>
+          <div class="card">
+            <div class="card__side card__side--front">
+              Front
+            </div>
+            <div class="card__side card__side--back">
+              Back
+            </div>
+            
             </div>
           </div>
         </div>
