--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           </div>
         </div>
       </section>
+
       <section class="section-features">
         <!-- Flexbox container -->
         <div class="container-feature">
@@ -258,6 +259,12 @@
 
         <div class="u-center-text u-margin-top-big">
           <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="u-center-text">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
       </section>
     </main>
