Stories section | Finalized the 2 stories and Read all stories

--- a/index.html
+++ b/index.html
@@ -263,8 +263,72 @@
       </section>
 
       <section class="section-stories">
-        <div class="u-center-text">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <!-- Story 1 -->
+        <div class="container-feature u-margin-bottom-big">
+          <div class="story">
+            <!-- Circle photo -->
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Image on the tour"
+                class="story__image"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+
+            <div class="story__text">
+              <!-- Story heading -->
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week with my family
+              </h3>
+              <!-- Story paragraph -->
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Praesentium esse beatae laborum reprehenderit in sequi
+                reiciendis, ipsa, quod, sint eaque dicta amet ea harum.
+                Assumenda aliquid beatae voluptas explicabo quasi? Assumenda
+                aliquid beatae voluptas explicabo quasi?
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Story 2 -->
+        <div class="container-feature u-margin-bottom-huge">
+          <div class="story">
+            <!-- Circle photo -->
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Image on the tour"
+                class="story__image"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+
+            <div class="story__text">
+              <!-- Story heading -->
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely Different Now
+              </h3>
+              <!-- Story paragraph -->
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Praesentium esse beatae laborum reprehenderit in sequi
+                reiciendis, ipsa, quod, sint eaque dicta amet ea harum.
+                Assumenda aliquid beatae voluptas explicabo quasi? Assumenda
+                aliquid beatae voluptas explicabo quasi?
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn-text btn-text__size">
+            Read all stories &rarr;
+          </a>
         </div>
       </section>
     </main>
