--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
 
-        <div class="container-feature">
+        <div class="container-feature u-margin-bottom-huge">
           <!-- Card 1 -->
           <div class="card">
             <!-- FRONT SIDE OF CARD 1 -->
@@ -257,12 +257,19 @@
           </div>
         </div>
 
-        <div class="u-center-text u-margin-top-big">
+        <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
