Finally added CTA background

--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
       </section>
 
       <section class="section-book">
-        <div class="book">
-          <div class="book__picture">&nbsp;</div>
-        </div>
+        <div class="container-book">
+            <img src="img/nat-10.jpg" class="book"></img>
+        </div>      
       </section>
     </main>
   </body>
