--- a/index.html
+++ b/index.html
@@ -338,12 +338,37 @@
           </a>
         </div>
       </section>
-
-      <section class="section-book">
-        <div class="container-book">
-            <img src="img/nat-10.jpg" class="book"></img>
-        </div>      
-      </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+
+          <picture class="footer__logo">
+              <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                      media="(max-width: 37.5em)">
+              <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" src="img/logo-green-2x.png">
+          </picture>
+
+
+          
+      </div>
+      <div class="row">
+          <div class="col-1-of-2">
+              <div class="footer__navigation">
+                  <ul class="footer__list">
+                      <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                      <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                      <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                      <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                      <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="col-1-of-2">
+              <p class="footer__copyright">
+                  Built by <a href="#" class="footer__link">Denzel Sapatin</a> for his project lists <a href="#" class="footer__link">HTML, CSS, & SASS</a>.
+                  Copyright &copy; by Denzel Sapatin. Credit to Jonas Schmedtmann for an awesome web design.
+              </p>
+          </div>
+      </div>
   </body>
 </html>
