--- a/index.html
+++ b/index.html
@@ -16,23 +16,40 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
 
-  <div class="navigation">
-    <input type="checkbox"  class="navigation__checkbox" id="navi-toggle" >
+      <label for="navi-toggle" class="navigation__button"
+        ><span class="navigation__icon">&nbsp;</span></label
+      >
 
-    <label for="navi-toggle" class="navigation__button"><span class="navigation__icon">&nbsp;</span></label>
-
-    <div class="navigation__background">&nbsp;</div>
-    <nav class="navigation__nav">
-      <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
-      </ul>
-    </nav>
-  </div>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#about" class="navigation__link"
+              ><span>01</span>About Natours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>02</span>Your benefits</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#tours" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#stories" class="navigation__link"><span>04</span>Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#book" class="navigation__link"><span>05</span>Book now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <!-- -------- Header -------- -->
     <header class="header">
       <!-- Logo -->
@@ -49,12 +66,12 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
         <!-- Primary Button -->
-        <a href="#" class="btn btn--white">Discover our tours</a>
+        <a href="#tours" class="btn btn--white">Discover our tours</a>
       </div>
     </header>
     <!-- -------- Main -------- -->
     <main>
-      <section class="section-about">
+      <section class="section-about" id="about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
@@ -169,7 +186,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="tours">
         <!-- Most popular tours TEXT Area -->
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
@@ -204,7 +221,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$297</p>
                 </div>
-                <a href="#" class="btn btn--white btn--round">Book now!</a>
+                <a href="#popup" class="btn btn--white btn--round">Book now!</a>
               </div>
             </div>
           </div>
@@ -236,7 +253,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$497</p>
                 </div>
-                <a href="#" class="btn btn--white btn--round">Book now!</a>
+                <a href="#popup" class="btn btn--white btn--round">Book now!</a>
               </div>
             </div>
           </div>
@@ -268,18 +285,18 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$897</p>
                 </div>
-                <a href="#" class="btn btn--white btn--round">Book now!</a>
+                <a href="#popup" class="btn btn--white btn--round">Book now!</a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn btn--green">Discover all tours</a>
+          <a href="#popup" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
 
-      <section class="section-stories">
+      <section class="section-stories" id="stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/video.mp4" type="video/mp4" />
@@ -356,84 +373,147 @@
         </div>
       </section>
 
-      <section class="section-book">
+      <section class="section-book" id="book">
         <div class="row">
-            <div class="book">
-                <div class="book__form">
-                    <form action="#" class="form">
-                        <div class="u-margin-bottom-medium">
-                            <h2 class="heading-secondary">
-                                Start booking now
-                            </h2>
-                        </div>
-
-                        <div class="form__group">
-                            <input type="text" class="form__input" placeholder="Full name" id="name" required>
-                            <label for="name" class="form__label">Full name</label>
-                        </div>
-
-                        <div class="form__group">
-                            <input type="email" class="form__input" placeholder="Email address" id="email" required>
-                            <label for="email" class="form__label">Email address</label>
-                        </div>
-
-                        <div class="form__group u-margin-bottom-medium">
-                            <div class="form__radio-group">
-                                <input type="radio" class="form__radio-input" id="small" name="size">
-                                <label for="small" class="form__radio-label">
-                                    <span class="form__radio-button"></span>
-                                    Small tour group
-                                </label>
-                            </div>
-
-                            <div class="form__radio-group">
-                                <input type="radio" class="form__radio-input" id="large" name="size">
-                                <label for="large" class="form__radio-label">
-                                    <span class="form__radio-button"></span>
-                                    Large tour group
-                                </label>
-                            </div>
-                        </div>
-
-                        <div class="form__group">
-                          <a href="#" class="btn btn--green">Next Step &rarr;</a>
-                        </div>
-                    </form>
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start booking now</h2>
                 </div>
+
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full name"
+                    id="name"
+                    required
+                  />
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                    required
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size"
+                    />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group
+                    </label>
+                  </div>
+
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size"
+                    />
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group
+                    </label>
+                  </div>
+                </div>
+
+                <div class="form__group">
+                  <a href="#" class="btn btn--green">Next Step &rarr;</a>
+                </div>
+              </form>
             </div>
+          </div>
         </div>
-    </section>
+      </section>
     </main>
     <footer class="footer">
-      <div class="footer__logo-box">
+    <div class="footer__logo-box">
+      <picture class="footer__logo">
+        <source
+          srcset="
+            img/logo-green-small-1x.png 1x,
+            img/logo-green-small-2x.png 2x
+          "
+          media="(max-width: 37.5em)"
+        />
+        <img
+          srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+          alt="Full logo"
+          src="img/logo-green-2x.png"
+        />
+      </picture>
+    </div>
 
-          <picture class="footer__logo">
-              <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
-                      media="(max-width: 37.5em)">
-              <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" src="img/logo-green-2x.png">
-          </picture>
-
-
-          
+    <div class="row">
+      <div class="col-1-of-2">
+        <div class="footer__navigation">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Company</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Contact us</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Carrers</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Privacy policy</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Terms</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="row">
-          <div class="col-1-of-2">
-              <div class="footer__navigation">
-                  <ul class="footer__list">
-                      <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-                      <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-                      <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
-                      <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
-                      <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
-                  </ul>
-              </div>
+      <div class="col-1-of-2">
+        <p class="footer__copyright">
+          Built by <a href="#" class="footer__link">Denzel Sapatin</a> for his
+          project lists <a href="#" class="footer__link">HTML, CSS, & SASS</a>.
+          Copyright &copy; by Denzel Sapatin. Credit to Jonas Schmedtmann for an
+          awesome web design.
+        </p>
+      </div>
+    </div>
+    <div class="popup" id="popup">
+      <div class="popup__content">
+          <div class="popup__left">
+              <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+              <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
           </div>
-          <div class="col-1-of-2">
-              <p class="footer__copyright">
-                  Built by <a href="#" class="footer__link">Denzel Sapatin</a> for his project lists <a href="#" class="footer__link">HTML, CSS, & SASS</a>.
-                  Copyright &copy; by Denzel Sapatin. Credit to Jonas Schmedtmann for an awesome web design.
+          <div class="popup__right">
+              <a href="#section-tours" class="popup__close">&times;</a>
+              <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+              <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+              <p class="popup__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
+                  amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
+                  sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
+                  gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
+                  Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+                  vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
+                  vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
+                  euismod nisi porta.
               </p>
+              <a href="#" class="btn btn--green">Book now</a>
           </div>
       </div>
+    </div>
   </body>
 </html>
