--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#about" class="navigation__link"
+            <a href="#" class="navigation__link"
               ><span>01</span>About Natours</a
             >
           </li>
@@ -470,7 +470,7 @@
               <a href="#" class="footer__link">Contact us</a>
             </li>
             <li class="footer__item">
-              <a href="#" class="footer__link">Carrers</a>
+              <a href="#" class="footer__link">Careers</a>
             </li>
             <li class="footer__item">
               <a href="#" class="footer__link">Privacy policy</a>
