Finalized Website | Fixed responsive

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     </div>
 
     <div class="u-center-text u-margin-bottom-big">
-        <h2 class="heading-secondary">
+        <h2 class="heading-secondary u-margin-top-big ">
             We make people genuinely happy
         </h2>
     </div>
